--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -130,7 +130,7 @@ E-mail: \{nonono\}@nonono.com}
 %E-mail: prhsilva2012@gmail.com, lucascordeiro@ufam.edu.br}
 
 \begin{abstract}
-\textcolor{blue}{Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) is well known by its capability to verify software. Its use as optimization tool, to solve hardware and software (HW-SW) partitioning problem, is something new. Moreover, its integration with the maximum satisfiability solver $\nu$Z tool, which provides a portfolio of approaches for solving linear optimization problems over SMT formulas, is unprecedented. We present new alternative approaches to solve the HW-SW partitioning problem. First, we use BMC based on SMT in conjunction with a multi-core support using Open Multi-Processing to create four variants to solve the partitioning problem. In other approach, we integrate the maximum satisfiability solver $\nu$Z tool into the BMC tool, making BMC as a specialized solution for optimization in a single-core environment. Multi-core SMT-based BMC approach allows initializing many verification instances using different approaches based on the number of available processing cores, where each instance checks for a different optimum value until the optimization problem is satisfied. We implement five different algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). We compare all proposed approaches to a state-of-the-art optimization tool (MATLAB). Experimental results show that there is no single optimization tool to solve all HW-SW partitioning benchmarks, but based in medium complexity benchmarks, ESBMC integrated with $\nu$Z was faster and precise.}
+\textcolor{blue}{Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) is well known by its capability to verify software. Its use as optimization tool, to solve hardware and software (HW-SW) partitioning problem, is something new. Moreover, its integration with the maximum satisfiability solver $\nu$Z tool, which provides a portfolio of approaches for solving linear optimization problems over SMT formulas, is unprecedented. We present new alternative approaches to solve the HW-SW partitioning problem. First, we use BMC based on SMT in conjunction with a multi-core support using Open Multi-Processing to create four variants to solve the partitioning problem. In another proposed approach, we integrate the maximum satisfiability solver $\nu$Z tool into the BMC tool, making BMC as a specialized solution for optimization in a single-core environment. Multi-core SMT-based BMC approach allows initializing many verification instances using different approaches based on the number of available processing cores, where each instance checks for a different optimum value until the optimization problem is satisfied. We implement five different algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). We compare all proposed approaches to a state-of-the-art optimization tool (MATLAB). Experimental results show that there is no single optimization tool to solve all HW-SW partitioning benchmarks, but based on medium complexity benchmarks, ESBMC-$\nu$Z was faster and precise.}
 \end{abstract}
 
 \KEYWORD{hardware-software co-design, hardware-software partitioning, optimization, model checking, multi-core, maximum satisfiability.}
@@ -155,11 +155,13 @@ no no no.\vs{9}}
 Nowadays, with the strong development of embedded systems, the design phase plays an important role. At early stages, the design is split into separated flows: hardware (HW) and software (SW). The partitioning decision process, which deals with decisions upon which parts of the application have to be designed in hardware and which one in software, must be supported by any well-structured methodology. If there is no methodology support, a number of issues, {\it e.g.}, design flow interruptions, redesigns, and undesired iterations may affect the overall development process, the quality, and the life-cycle of the final system.
 
 %-----------------related work came to here and was rewriten
-\textcolor{blue}{Since the first decade of 2000s, two main paths have been tracked to solve the HW-SW partitioning problem, {\it i.e.}, to find the exact solution of a optimization problem, as presented by~\cite{Mann2007}; to use heuristics to speed up performance time, as presented by~\cite{Arato2003} and~\cite{Arato2005}. It is worth mentioning that the using heuristics the final solution is not necessarily an optimal global solution.} 
+\textcolor{blue}{Since the first decade of 2000s, two main paths have been tracked to solve the HW-SW partitioning problem, {\it i.e.}, to find the exact solution of a optimization problem, as presented by~\cite{Mann2007}; to use heuristics to speed up performance time, as presented by~\cite{Arato2003} and~\cite{Arato2005}. It is worth mentioning that using heuristics the final solution is not necessarily an optimal global solution.} 
 
 \textcolor{blue}{In terms of SMT-based verification, most related studies are restricted to present the model, its modification to programming languages ({\it e.g.}, C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs, and~\cite{Cordeiro2012} uses ESBMC for embedded ANSI-C software. In~\cite{Trindade2015}, and~\cite{Trindade2016} it was proven that it is possible to use ESBMC to solve HW-SW partitioning in a single- and multi-core way, but the former has performance issues that were improved by the latter, which used only a sequential search to perform multi-core model checking. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification, as mentioned in~\cite{Holzmann2011}, and modifications of internal search engines to add support for parallelism, as presented by~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solving, as described by~\cite{Wintersteiger2009}.} 
 
 \textcolor{blue}{Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories, as presented by~\cite{Bjorner2015}. In particular, $\nu$Z tool offers substantial performance improvement in optimization problems, as described by~\cite{Bjorner2014} and~\cite{Bjorner2015}. As an application example, \cite{Pavlinovic2015} propose an approach which considers all possible compiler error sources for statically typed functional programming languages and reports the most useful one subject to some usefulness criterion. The authors formulate this alternative single-core approach as an optimization problem related to SMT and use $\nu$Z to compute an optimal error source in a given ill-typed program.}
+
+\subsection{Contributions}
 
 \textcolor{blue}{At this work, we apply SMT-based verification methods to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Experimental results are compared to ILP (integer linear programming), GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach, as described by~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab, as described in~\cite{TheMathWorks2013}, while $\nu$Z is a built-in tool to the SMT solver Z3. All multi-core ESBMC approaches, together with $\nu$Z, are implemented with the ESBMC tool. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification and a MaxSMT solver to check for HW-SW partitioning problems in embedded systems.}
 
@@ -179,7 +181,7 @@ Nowadays, with the strong development of embedded systems, the design phase play
 
 \subsection{Availability of Data and Tools}
 
-Our experiments are based on a set of publicly available benchmarks. All benchmarks, tools, and results of our evaluation are available on a supplementary web page \texttt{http://esbmc.org/}.
+Our experiments are based on a set of publicly available benchmarks. \textcolor{blue}{All tools, benchmarks, and results of our evaluation are available on a supplementary web page \texttt{http://esbmc.org} and \texttt{http://esbmc.org/benchmarks}}.
 
 \subsection{Organization of this Work}
 
@@ -320,7 +322,7 @@ The mathematical modeling of the HW-SW partitioning problem was taken from~\cite
 \label{Informal-Model-or-Assumptions}
 %----------------------------------------------
 
-The informal model can be described by five characteristics. First, there is only one software context, {\it i.e.}, there is just one general-purpose processor, and there is only one hardware context. The components of the system must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the running time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, or energy consumption \textcolor{blue}{(the decision is made by user or from project requirement).} Fourth, based on the premise that hardware is significantly faster than software, the running time of the components in hardware is considered as zero. Finally, if two components are mapped to the same context, then there is no overhead of communication between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this work. Hardware components do not need scheduling, because the running time is assumed to be zero. Because there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, \textcolor{blue}{with a simplified HW-SW model,} where the focus is on bipartitioning, as presented by~\cite{Teich2012}.
+The informal model can be described by five characteristics. First, there is only one software context, {\it i.e.}, there is just one general-purpose processor, and there is only one hardware context. The components of the system must be mapped to either one of these two contexts. Second, the software implementation of a component is associated with a software cost, which is the running time of the component. Third, the hardware implementation of a component has a hardware cost, which can be area, heat dissipation, or energy consumption \textcolor{blue}{(the decision is typically made by the engineer or from the project requirement).} Fourth, based on the premise that hardware is significantly faster than software, the running time of the components in hardware is considered as zero. Finally, if two components are mapped to the same context, then there is no overhead of communication between them; otherwise, there is an overhead. The consequence of these assumptions is that scheduling does not need to be addressed in this work. Hardware components do not need scheduling, because the running time is assumed to be zero. Because there is only one processor, software components do not need to be scheduled as well. Therefore, the focus is only on the partitioning problem. That configuration describes a first-generation co-design, \textcolor{blue}{with a simplified HW-SW model,} where the focus is on bipartitioning, as presented by~\cite{Teich2012}.
 
 %----------------------------------------------
 \subsection{Formal Model}
@@ -385,7 +387,7 @@ As computer hardware architecture moves from single- to multi-cores, parallel pr
 \label{ILPGA}
 %----------------------------------------------
 
-The ILP and GA were taken from our previous studies, from~\cite{Trindade2015} and~\cite{Trindade2016}. \textcolor{blue}{Both use slack variables in order to eliminate the modulus operator of Eq.~\eqref{hw-sw-partitioning} and to use commercial tools.} However, GA had improvements from the parameters of related studies in order to increase the solution accuracy without producing timeout. The tuning was performed by empirical tests and resulted in changing of three parameters, which are passed to the function \textit{ga} of MATLAB, as \textcolor{blue}{mentioned} in~\cite{TheMathWorks2013}: the population size was set from $300$ to $500$, the Elite count changed from $2$ (default value) to $50$, and the number of generations changed from $100*NumberOfVariables$ (default) to $75$. \textcolor{blue}{All ILP and GA parameters were presented and discussed in~\cite{Trindade2015} and~\cite{Trindade2016}. In particular, the ILP and GA algorithms were chosen since they were also used in other related work, as~\cite{Arato2003} and~\cite{Mann2007}, thus facilitating the comparison to the present techniques (that we propose in this paper).}
+The ILP and GA were taken from our previous studies, from~\cite{Trindade2015} and~\cite{Trindade2016}. \textcolor{blue}{Both use slack variables in order to eliminate the modulus operator of Eq.~\eqref{hw-sw-partitioning} and to use commercial tools.} However, GA had improvements from the parameters of related studies in order to increase the solution accuracy without producing timeout. The tuning was performed by empirical tests and resulted in changing of three parameters, which are passed to the function \textit{ga} of MATLAB, as \textcolor{blue}{mentioned} in~\cite{TheMathWorks2013}: the population size was set from $300$ to $500$, the Elite count changed from $2$ (default value) to $50$, and the number of generations changed from $100*NumberOfVariables$ (default) to $75$. \textcolor{blue}{All ILP and GA parameters were presented and discussed in~\cite{Trindade2015} and~\cite{Trindade2016}. In particular, the ILP and GA algorithms were chosen since they were also used in another related work, as~\cite{Arato2003} and~\cite{Mann2007}, thus facilitating the comparison to the present techniques (that we propose in this paper).}
 
 %----------------------------------------------
 \subsection{Verification Algorithm using Sequential ESBMC}
@@ -394,7 +396,7 @@ The ILP and GA were taken from our previous studies, from~\cite{Trindade2015} an
 
 Figure~\ref{Pseudocode-describing-ESBMC} shows ESBMC pseudocode with the same constraints and conditions placed on ILP and GA. Two values must be controlled to obtain the results and to perform the optimization. One is the initial software cost, as defined in Section~\ref{Formal-Model}. The other is the halting condition (code violation) that stops the algorithm.
 
-\textcolor{blue}{Remembering that, as defined by formal model, there is a index of each decision variable, indicated by letter "i", which ranges from zero to the number of nodes of the problem to be solved.} 
+\textcolor{blue}{Note that, as defined by the formal model, there is an index for each decision variable, indicated by letter ``i'', which ranges from $0$ to the number of nodes of the (particular) problem to be solved.} 
 
 %\textcolor{red}{Conforme mencionado pelo revisor, falta definir o indice ``i''.}
 
@@ -422,7 +424,7 @@ main {
 \end{lstlisting}
 
 \vspace{2 mm}
-\textcolor{blue}{It is possible to instruct ESBMC with which type of values the variables must be evaluated. Therefore, there is a declaration to populate all decision variables $x$ with non-deterministic Boolean values. As a result, the Boolean value that is assigned to each decision variable $x_i$ is actually selected by the SMT Solver, during its solving phase, which checks once all possible combinations to yield a feasible solution, {\it e.g.}, by handling the terms in the given background theory using a decision procedure~\cite{DeMoura2008,Brummayer2009}. If this is achieved, the ASSUME directive ensures the compliance of the constraint $A.x \leq b$}.
+\textcolor{blue}{It is possible to instruct ESBMC with which type of values the variables must be evaluated. Therefore, there is a declaration to populate all decision variables $x$ with non-deterministic Boolean values. As a result, the Boolean value that is assigned to each decision variable $x_i$ is actually selected by the SMT Solver, during its solving phase, which checks once all possible combinations to yield a feasible solution, {\it e.g.}, by handling the terms in the given background theory using a decision procedure~\cite{DeMoura2008,Brummayer2009}. If this is achieved, then the ASSUME directive ensures the compliance of the constraint $A.x \leq b$}.
 
 A loop controls the cost of hardware hint, starting with zero and reaching the maximum value considering the case, where all nodes are partitioned to hardware ($H_{max}$). To every test performed, the hardware hint is compared to the feasible solution. This is accomplished by an \textit{ASSERT} statement at the end of the algorithm, a predicate that controls the halt condition (a \textit{true-false} statement). If the predicate is \textit{FALSE}, then the optimization is finished, {\it i.e.}, the solution is found. 
 
@@ -580,11 +582,11 @@ This section is split into three parts. The setup is described in Section~\ref{E
 
 ESBMC v$2$.$0$ running on a $64$-bit Ubuntu $14$.$04$.$1$ LTS operating system was used. A parallel approach of the ESBMC-SS, ESBMC-PS, ESBMC-PB were implemented in C$++$11. Version $2$.$0$.$1$ of Boolector SMT-solver, as described in~\cite{Brummayer2009} (freely available) was used as the default solver for ESBMC. ESBMC-$\nu$Z as a built-in tool to Z3 was also used, as presented in~\cite{Bjorner2014}. For ILP and GA formulations, MATLAB R$2013$a from MathWorks with Parallel Computing Toolbox was used, as described in~\cite{TheMathWorks2013}. MATLAB is a dynamically typed high-level language, known as the state-of-the-art mathematical software, as described in~\cite{Tranquillo2011} and is widely used by the engineering community, as described in~\cite{Hong2010}.
 
-\textcolor{blue}{We have to point out that the experimental results presented here depend on the computer’s processor and memory, the version of each tool (MATLAB and ESBMC), and the partitioning problem to be solved. Additionally, any change from MATLAB to another tool or to GA/ILP libraries for different programming languages can influence the measured time of the algorithms.}
+\textcolor{blue}{We have to point out that the experimental results presented here depend on the computer's processor and memory, the version of each tool (MATLAB and ESBMC), and the partitioning problem to be solved. Additionally, any change from MATLAB to another tool or to GA/ILP libraries for different programming languages can influence the measured time of the algorithms.}
 
 All experiments were conducted on an otherwise idle Intel Core i$7$-$2600$ ($8$-cores), with $3$.$4$ GHz and $24$ GB of RAM, running Ubuntu $64$-bits. Each time was measured $3$ times (average taken). \textcolor{blue}{Empirical tests performed by the authors demonstrated that a higher number of measurements, for each technique, did not produce significant differences in the experimental results (which were always below 10\% and mostly around 3\%).}
 
-Based on \textcolor{blue}{mean,} standard deviation and tolerance interval to each set of time sample, it was obtained a \textcolor{blue}{confidence level} of $91.7$\% to ESBMC (sequential, SS, PB and $\nu$Z), $95.9$\% to ESBMC-PS, and $92.0$\% to ILP and GA. A timeout condition (TO) is reached when the verification time is longer than $3600$ seconds. A memory-out (MO) occurs when the tool reaches $15$ GB of memory. \textcolor{blue}{The TO was defined based on previous empirical tests as well, where a larger TO ({\it e.g.}, $5000$ seconds) did not produce substantial differences in the experimental results.} 
+Based on the \textcolor{blue}{mean,} standard deviation and tolerance interval to each set of time sample, it was obtained a \textcolor{blue}{confidence level} of $91.7$\% to ESBMC (sequential, SS, PB and $\nu$Z), $95.9$\% to ESBMC-PS, and $92.0$\% to ILP and GA. A timeout condition (TO) is reached when the verification time is longer than $3600$ seconds. A memory-out (MO) occurs when the tool reaches $15$ GB of memory. \textcolor{blue}{The TO was defined based on previous empirical tests as well, where a larger TO ({\it e.g.}, $5000$ seconds) did not produce substantial differences in the experimental results.} 
 
 %----------------------------------------------
 \subsection{Description of Benchmarks}
@@ -630,7 +632,7 @@ To perform the experiments, some benchmarks provided by~\cite{Mann2007} were use
 \label{Experimental-Results}
 %----------------------------------------------
 
-Table~\ref{Experimental-results-of-the-complex-benchmarks} shows the experimental results using Matlab (ILP and GA) and ESBMC (ESBMC-SS, ESBMC-PS, ESBMC-PB, ESBMC-$\nu$Z) tools. \textcolor{blue}{The number of nodes, edges and the initial software cost (S0) are given to each benchmark. Hp and Sp represent the results of partitioning process for each technique, i.e., the optimized value of partitioned hardware and software. T(s) means the average time taken from the experiments. Particularly about GA there is an additional row informing how far from the exact answer is the found solution.}
+Table~\ref{Experimental-results-of-the-complex-benchmarks} shows the experimental results using Matlab (ILP and GA) and ESBMC (ESBMC-SS, ESBMC-PS, ESBMC-PB, ESBMC-$\nu$Z) tools. \textcolor{blue}{The number of nodes, edges, and the initial software cost (S0) are given to each benchmark. Hp and Sp represent the results of partitioning process for each technique, {\it i.e.}, the optimized value of partitioned hardware and software. T(s) means the average time taken from the experiments. Particularly about GA there is an additional row informing how far from the exact answer is the found solution.}
 
 There is no single tool for efficiently solving all HW-SW partitioning benchmarks. In particular, the best (proposed) solution is ESBMC-$\nu$Z, which solves $4$ out of $7$ benchmarks; ESBMC-$\nu$Z is faster than ILP in all supported benchmarks ({\it i.e.}, CRC$32$, Patricia, Dijkstra, Clustering), but it returns three TOs (timeouts) related to RC6, Fuzzy and Mars benchmarks.
 
@@ -638,7 +640,7 @@ In contrast to ESBMC-$\nu$Z, ILP solves $5$ out of $7$ benchmarks. When ILP prod
 
 Note further that all multi-core ESBMC implementations produce better results than the sequential one. In particular, ESBMC-PB implementation outperforms all other multi-core ESBMC approaches, where its performance improves as the number of nodes and edges increase. One notable case is the clustering benchmark, when verified by ESBMC-PB, it executes $3$ times faster than ILP and $2$.$5$ times slower than ESBMC-$\nu$Z. However, when the amount of nodes is around $30$, ESBMC-PB does not outperform ESBMC-$\nu$Z and ILP tools. When analyzing all benchmarks, ESBMC-PB produces TO for RC$6$, Fuzzy, and Mars; however, the results are still promising if we take into consideration that $\nu$Z and Matlab are state-of-the-art tools with respect to optimization problems.
 
-\textcolor{blue}{Regarding the amount of MOs, the sequential ESBMC approach has to explore all (possible) states until it finds the HW-SW partitioning solution; it starts from an extreme, where all variables are selected as software, and then incrementally tests one by one to check whether a given node will be implemented in software or in hardware. In contrast, all multi-core ESBMC approaches and ESBMC-$\nu$Z, are optimized to reach faster the HW/SW partitioning solution than the sequential one, without the need for exploring all states as the sequential ESBMC approach does. As a result, if the HW/SW partitioning problem grows in complexity, then the sequential ESBMC approach tends to easily reach MO due to the state-space explosion.}
+\textcolor{blue}{Regarding the amount of MOs, the sequential ESBMC approach has to explore all (possible) states until it finds the HW-SW partitioning solution; it starts from an extreme, where all variables are selected as software, and then incrementally tests one by one to check whether a given node will be implemented in software or in hardware. In contrast, all multi-core ESBMC approaches and ESBMC-$\nu$Z, are (heuristically) optimized to reach faster the HW/SW partitioning solution than the sequential one, without the need for exploring all states as the sequential ESBMC approach does. As a result, if the HW/SW partitioning problem grows in complexity, then the sequential ESBMC approach tends to easily reach MO due to the state-space explosion.}
 
 \begin{table*}[ht]
   \centering
@@ -753,7 +755,7 @@ The clustering benchmark seems to be the limit to test the ESBMC (described) imp
 \label{Conclusions}
 %----------------------------------------------
 
-We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. \textcolor{blue}{Below that limit of nodes, the best solution turns out to be ESBMC-$\nu$Z since its execution time is 4,3 to 7,5 times faster than ILP, faster than any other ESBMC approach (until 462 times faster) and its result is precise (when compared with GA).} ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
+We presented five approaches to solve the HW-SW partitioning problem and compared them to other state-of-the-art techniques. Experimental results showed that for a number of nodes larger than $300$, the best solution for the HW-SW partitioning problem is ILP. \textcolor{blue}{Below that limit of nodes, the best solution turns out to be ESBMC-$\nu$Z since its execution time is 4,3 to 7,5 times faster than ILP, faster than any other ESBMC approach (until 462 times faster) and its result is precise (when compared to GA).} ESBMC-PB is a viable alternative for a number of nodes lower than $150$. GA had an intermediate result in terms of performance, but the error presented from exact solution made it not acceptable to that kind of application. 
 
 If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpler. \textcolor{blue}{ESBMC and $\nu$Z have BSD-Style and MIT licenses, respectively and can be downloaded and used for free. Similarly, it is also possible to use free GA and ILP libraries (BSD-Style and MIT licenses) for different programing languages.} 
 
@@ -825,7 +827,7 @@ Holzmann, G., Joshi, R. and Groce, A. (2011) 'Swarm Verification Techniques', {\
 \bibitem[\protect\citeauthoryear{Holzmann}{2012}]{Holzmann2012}
 Holzmann, G. (2012) 'Parallelizing the spin model checker', {\it Proceedings of the International Symposium on Model Checking Software}, Vol. 7385, pp.155--171.
 
-\bibitem[\protect\citeauthoryear{Hong and Cai}{2010}]{Hong2012}
+\bibitem[\protect\citeauthoryear{Hong and Cai}{2010}]{Hong2010}
 Hong, L. and Cai, J. (2010) 'The application guide of mixed programming between MATLAB and other programming languages', {\it Proceedings of the International Conference on Computer and Automation Engineering}, pp.185--189.
 
 \bibitem[\protect\citeauthoryear{Huong and Binh}{2012}]{Huong2012}
