--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -186,7 +186,7 @@ Our experiments are based on a set of publicly available benchmarks. \textcolor{
 \subsection{Organization of this Work}
 
 This article is organized as follows: Section~\ref{background} gives a background on optimization techniques, $\nu$Z, ESBMC, and OpenMP tools. 
-Section~\ref{Mathematical-modeling} describes the informal and formal mathematical modeling. The SMT-based BMC method is presented in Section~\ref{Analysis-of-the-partitioning-problem-using-ESBMC}, and in particular, Section~\ref{Analysis-of-the-partitioning-problem-using-vZ} presents the partitioning model using $\nu$Z. In Section~\ref{Experimental-Evaluation}, we show the experimental results using several embedded systems applications. In Section~\ref{Related-Work}, we discuss the related work and we conclude and describe future work in Section~\ref{Conclusions}.
+Section~\ref{Mathematical-modeling} describes the informal and formal mathematical modeling. The SMT-based BMC method is presented in Section~\ref{Analysis-of-the-partitioning-problem-using-ESBMC}, and in particular, Section~\ref{Analysis-of-the-partitioning-problem-using-vZ} presents the partitioning model using $\nu$Z. In Section~\ref{Experimental-Evaluation}, we show the experimental results using several embedded systems applications. And we conclude and describe future work in Section~\ref{Conclusions}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background}
@@ -214,9 +214,9 @@ Optimization is the act of obtaining the best result ({\it i.e.}, the optimal so
 \end{equation}
 
 \vspace{2 mm}
-Here can be cited the relevant work of ~\cite{Mann2007} in optimization, who modified a branch-and-bound algorithm to speed up the execution time. ~\cite{Sapienza2013} used multiple criteria decision analysis to solve the HW-SW partitioning problem.
+\textcolor{blue}{Here can be cited the relevant work of ~\cite{Mann2007} in optimization, who modified a branch-and-bound algorithm to speed up the execution time. ~\cite{Sapienza2013} used multiple criteria decision analysis to solve the HW-SW partitioning problem.}
 
-In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, as described by~\cite{Rao2009}, {\it e.g.}, those used in the GA. The only drawback is that the found solution may not be the global minimum or maximum. As relevant works, ~\cite{Jiang2012} used a GA mixed with simulated annealing. And~\cite{Huong2012} designed a Pareto optimization modified using GA.
+In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, as described by~\cite{Rao2009}, {\it e.g.}, those used in the GA. The only drawback is that the found solution may not be the global minimum or maximum. \textcolor{blue}{As relevant works, ~\cite{Jiang2012} used a GA mixed with simulated annealing. And~\cite{Huong2012} designed a Pareto optimization modified using GA.}
 
 Alternatively, tools such as ESBMC and $\nu$Z can be used to solve optimization problems so that the global minimum or maximum solution is found. The following sections describe the main features of ESBMC and $\nu$Z tools.
 
@@ -729,7 +729,8 @@ The only technique that is able to solve all benchmarks is GA; however, its prec
 
 Note that RC$6$ produced timeouts for all implementations of ESBMC; GA did not produce the correct answer, and ILP solves correctly most benchmarks, except for Mars and Fuzzy, which produced timeouts and memory-outs in all tools that aim to find the exact solution. No tool was capable to solve Mars in less than $3600$ seconds, while GA solved all benchmarks, but mostly incorrectly.
 
-The clustering benchmark seems to be the limit to test the ESBMC (described) implementations; note, however, that more than $150$ nodes lead to TO and MO. ILP shows robustness and produces results even for a high number of nodes and edges, but limited to $329$ nodes.
+The clustering benchmark seems to be the limit to test the ESBMC (described) implementations; 
+\textcolor{blue}{although more benchmarks with complexity similar to clustering should be included in future work for a more precise conclusion. Note, however, that more than $150$ nodes lead to TO and MO. ILP shows robustness and produces results even for a high number of nodes and edges, but limited to RC$6$ benchmark with $329$ nodes.}
 
 %----------------------------------------------
 %\section{Related Work}
@@ -761,8 +762,9 @@ If considering off-the-shelf tools, as MATLAB to ILP and GA, the coding is simpl
 
 Experimental results also pointed to an improvement of ESBMC, when using a parallel approach. The fastest ESBMC approach is ESBMC-PB, which produces good results for an intermediate amount of edges and nodes. Thus, considering that nowadays processors have more and more cores, when modeling the problem, it is possible to consider multi-core model checking as an alternative to solve the HW-SW partitioning problem. 
 
-Finally, there is an issue about $150$ nodes problem, since it seems to be the limit of multi-core ESBMC. However, it really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for larger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the search space size. In future work, we will address improvements in ESBMC to remove the parallel layer on top of ESBMC and implement it during symbolic execution so that we can optimize the overall verification time. \textcolor{blue}{Moreover, it will address specifically more complex types of architectures of HW-SW model, including more than one CPU, and the assumption of just singled-threaded program execution
-will be extended to multiprogramming and multiprocessing (second generation of co-design).}
+Finally, there is an issue about $150$ nodes problem, since it seems to be the limit of multi-core ESBMC. However, it really depends on the modeling granularity of the problem. Some researchers propose fine-grained models, in which each instruction can be mapped to either HW or SW. This may lead to thousands of nodes or even more. Others defend coarse-grained models, where decisions are made for larger components, thus even complex systems may consist of just some dozens of nodes to partition. In principle, a fine-grained approach may allow to obtain better partitions, but at the cost of an exponential increase of the search space size. 
+
+In future work, we will address improvements in ESBMC to remove the parallel layer on top of ESBMC and implement it during symbolic execution so that we can optimize the overall verification time. \textcolor{blue}{And so that the limits of the techniques can be defined more precisely, new benchmarks will be included in future work, with their complexity ranging between 100 and 400 nodes. Furthermore, more complex types of architectures of HW-SW model will be addressed, including more than one CPU, and the assumption of just singled-threaded program execution will be extended to multiprogramming and multiprocessing (second generation of co-design).}
 
 \begin{thebibliography}{10}
 
