[C-11] The first two paragraphs of related work contains several grammatical mistakes. The conclusion section is full of errors. What does “faster and notorious” and “expressive” mean as execution times.

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -163,7 +163,7 @@ Nowadays, with the strong development of embedded systems, the design phase play
 
 \subsection{Contributions}
 
-\textcolor{blue}{At this work, we apply SMT-based verification methods to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Experimental results are compared to ILP (integer linear programming), GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach, as described by~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab, as described in~\cite{TheMathWorks2013}, while $\nu$Z is a built-in tool to the SMT solver Z3. All multi-core ESBMC approaches, together with $\nu$Z, are implemented with the ESBMC tool. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification and a MaxSMT solver to check for HW-SW partitioning problems in embedded systems.}
+\textcolor{blue}{Here, we apply SMT-based verification methods to the HW-SW partition problem in three different ways using a multi-core ESBMC approach with OpenMP: ESBMC-SS using a sequential-search (SS), ESBMC-PS using a parallel-search (PS), and ESBMC-PB using a binary-search (BS). Experimental results are compared to ILP (integer linear programming), GA (generic algorithms) in a multi-core version, and also to $\nu$Z, which supports only a single-core approach, as described by~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the optimization toolbox of Matlab, as described in~\cite{TheMathWorks2013}, while $\nu$Z is a built-in tool to the SMT solver Z3. All multi-core ESBMC approaches, together with $\nu$Z, are implemented with the ESBMC tool. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification and a MaxSMT solver to check for HW-SW partitioning problems in embedded systems.}
 
 
 %-----------------
