--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -130,7 +130,8 @@ E-mail: \{nonono\}@nonono.com}
 %E-mail: prhsilva2012@gmail.com, lucascordeiro@ufam.edu.br}
 
 \begin{abstract}
-\textcolor{blue}{Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) is well known by its capability to verify software. Its use as optimization tool, to solve hardware and software (HW-SW) partitioning problem, is something new. Moreover, its integration with the maximum satisfiability solver $\nu$Z tool, which provides a portfolio of approaches for solving linear optimization problems over SMT formulas, is unprecedented. We present new alternative approaches to solve the HW-SW partitioning problem. First, we use BMC based on SMT in conjunction with a multi-core support using Open Multi-Processing to create four variants to solve the partitioning problem. In another proposed approach, we integrate the maximum satisfiability solver $\nu$Z tool into the BMC tool, making BMC as a specialized solution for optimization in a single-core environment. Multi-core SMT-based BMC approach allows initializing many verification instances using different approaches based on the number of available processing cores, where each instance checks for a different optimum value until the optimization problem is satisfied. We implement five different algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). We compare all proposed approaches to a state-of-the-art optimization tool (MATLAB). Experimental results show that there is no single optimization tool to solve all HW-SW partitioning benchmarks, but based on medium complexity benchmarks, ESBMC-$\nu$Z was faster and precise.}
+\textcolor{blue}{Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) is well known by its capability to verify software. Its use as optimization tool, to solve hardware and software (HW-SW) partitioning problem, is something new. Moreover, its integration with the maximum satisfiability solver $\nu$Z tool, which provides a portfolio of approaches for solving linear optimization problems over SMT formulas, is unprecedented. We present new alternative approaches to solve the HW-SW partitioning problem. First, we use BMC based on SMT in conjunction with a multi-core support using Open Multi-Processing to create four variants to solve the partitioning problem. In another proposed approach, we integrate the $\nu$Z into the BMC, making it as a specialized solution for optimization in a single-core environment. Multi-core SMT-based BMC approach allows initializing many verification instances based on the number of available processing cores, where each instance checks for a different optimum value until the optimization problem is satisfied. We implement five different algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). We compare all proposed approaches to a state-of-the-art optimization tool (MATLAB). Experimental results show that there is no single optimization tool to solve all HW-SW partitioning benchmarks, but based on medium complexity benchmarks, ESBMC-$\nu$Z had better performance.}
+
 \end{abstract}
 
 \KEYWORD{hardware-software co-design, hardware-software partitioning, optimization, model checking, multi-core, maximum satisfiability.}
